--- a/docs/style.css
+++ b/docs/style.css
@@ -5,3 +5,19 @@ body {
     background: #f9f9f9;
     color: #222;
 }
+
+#container {
+    display: flex;
+    flex-direction: row;
+}
+
+#song-selector {
+    width: 70vw;
+}
+
+#song-sidebar {
+    width: 30vw;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+}
