--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,14 @@ body {
     color: #222;
 }
 
+.song {
+    border: 1px solid green;
+}
+
+.folder {
+    border: 1px solid blue;
+}
+
 #container {
     display: flex;
     flex-direction: row;
