update Player and Selector classes; add current song highlighting and improve rendering logic

--- a/docs/style.css
+++ b/docs/style.css
@@ -6,14 +6,24 @@ body {
     color: #222;
 }
 
+
+h1 {
+    margin-block: 0.67em;
+    font-size: 2em;
+}
+
 .time-separator {
 }
 
 .song {
 }
 
-.active-song {
+.active-song-queue {
     color: green;
+}
+
+.active-song-selector {
+    color: blue;
 }
 
 .folder {
