--- a/public/style.css
+++ b/public/style.css
@@ -35,11 +35,11 @@ h1 {
 }
 
 #song-selector {
-    width: 70vw;
+    width: 60vw;
 }
 
 #song-sidebar {
-    width: 30vw;
+    width: 40vw;
     height: 100vh;
     position: fixed;
     right: 0;
@@ -47,4 +47,8 @@ h1 {
 
 ul {
     list-style: none;
+}
+
+.hidden {
+    display: none;
 }
