--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,15 @@ h1 {
     font-size: 2em;
 }
 
+#soundboard-title a {
+    color: inherit;
+    text-decoration: none;
+}
+
+#soundboard-title a:hover, h1 a:focus {
+    text-decoration: underline dotted;
+}
+
 #container {
     display: flex;
     flex-direction: row;
