--- a/docs/style.css
+++ b/docs/style.css
@@ -175,3 +175,8 @@ button:focus {
     font-weight: bold;
     margin-left: 1.9em;
 }
+
+#sorting-buttons {
+    display: flex;
+    flex-direction: row;
+}
