--- a/docs/style.css
+++ b/docs/style.css
@@ -190,5 +190,6 @@ button:focus {
     border-radius: 8px;
     background: #e3e8f0;
     font-size: 1em;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03);
     color: #222;
 }
