--- a/docs/style.css
+++ b/docs/style.css
@@ -163,6 +163,7 @@ button:focus {
     margin-top: 0.5em;
     max-height: 45vh;
     overflow-y: auto;
+    padding: 2px;
 }
 
 .active-song-queue {
